# FastAPI-CLEAN

./: .gitignore  README.md  config.py  main.py  pyproject.toml
configs/: Database.py  Environment.py  GraphQL.py
datastore/: __init__.py  database.py  entity.py  key.py
metadata/: Tags.py
repositories/: AuthorRepository.py  BookRepository.py
routers/v1/: AuthorRouter.py  BookRouter.py
schemas/graphql/: Author.py  Mutation.py  Query.py
schemas/pydantic/: AuthorSchema.py  BookSchema.py
services/: AuthorService.py  BookService.py
