[tool.black]
line-length = 60

[tool.isort]
profile = "black"
src_paths = ["configs", "core", "dependencies", "models", "repositories", "routers", "schemas", "services"]
virtual_env = "env"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "__tests__"
]

[tool.poetry]
name = "fastapi-clean"
version = "0.1.0"
description = ""
authors = ["Danny-Dasilva <dannydasilva.solutions@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
strawberry-graphql = "^0.175.0"
uvicorn = "^0.22.0"
pymongo = "^4.3.3"
bson = "^0.5.10"
pydantic-mongo = "^1.0.1"
orjson = "^3.8.11"
google-cloud-datastore = "^2.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
